Fix regression for intent picker UI

IntentPickerBubbleView is not saving the user's preference when they
decide to "Stay in Chrome" + "Remember my choice". This is a regression
that appeared in M67.

This CL specials case AppType::INVALID to handle saving user's
preference, previously proposed to add a new AppType::NATIVE_CHROME but
that sounds wrong given this enum lists non-cros app sources.

Besides that we need to make sure that the preference is communicated
to ARC via AddPreferredPackage and honored within ArcNavigationThrottle,
this can be achieved by adding a new enum PreferredPlatform that will
help DidLaunchPreferredArcApp to be more explicit.

Bug: 841971
Test: Build.
Change-Id: I383a926ae613ffe48f4dcd3a478ac124aefe4947
Reviewed-on: https://chromium-review.googlesource.com/1054584
Commit-Queue: David Jacobo <djacobo@chromium.org>
Reviewed-by: Yusuke Sato <yusukes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559221}
Former-commit-id: 6187d94092a3ae876cfd6a6a70be23328a0a6bfd