chrome/browser/chromeos/arc/intent_helper/arc_navigation_throttle.cc
@@ -231,9 +231,21 @@ void ArcNavigationThrottle::OnAppCandidatesReceivedForNavigation(
   }
 
   // If one of the apps is marked as preferred, launch it immediately.
-  if (DidLaunchPreferredArcApp(url, app_candidates)) {
-    std::move(callback).Run(chromeos::AppsNavigationAction::CANCEL, {});
-    return;
+  chromeos::PreferredPlatform pref_platform =
+      DidLaunchPreferredArcApp(url, app_candidates);
+
+  switch (pref_platform) {
+    case chromeos::PreferredPlatform::ARC:
+      std::move(callback).Run(chromeos::AppsNavigationAction::CANCEL, {});
+      return;
+    case chromeos::PreferredPlatform::NATIVE_CHROME:
+      std::move(callback).Run(chromeos::AppsNavigationAction::RESUME, {});
+      return;
+    case chromeos::PreferredPlatform::PWA:
+      NOTREACHED();
+      break;
+    case chromeos::PreferredPlatform::NONE:
+      break;  // Do nothing.
   }
 
   // We are always going to resume navigation at this point, and possibly show
@@ -262,13 +274,16 @@ void ArcNavigationThrottle::OnAppCandidatesReceivedForPicker(
   GetArcAppIcons(url, std::move(app_candidates), std::move(callback));
 }
 
-bool ArcNavigationThrottle::DidLaunchPreferredArcApp(
+chromeos::PreferredPlatform ArcNavigationThrottle::DidLaunchPreferredArcApp(
     const GURL& url,
     const std::vector<mojom::IntentHandlerInfoPtr>& app_candidates) {
   DCHECK_CURRENTLY_ON(content::BrowserThread::UI);
 
-  bool cancel_navigation = false;
+  chromeos::PreferredPlatform preferred_platform =
+      chromeos::PreferredPlatform::NONE;
+  chromeos::AppType app_type = chromeos::AppType::INVALID;
   const size_t index = FindPreferredApp(app_candidates, url);
+
   if (index != app_candidates.size()) {
     auto close_reason = chromeos::IntentPickerCloseReason::PREFERRED_APP_FOUND;
     const std::string& package_name = app_candidates[index]->package_name;
@@ -287,15 +302,17 @@ bool ArcNavigationThrottle::DidLaunchPreferredArcApp(
     } else if (ArcIntentHelperBridge::IsIntentHelperPackage(package_name)) {
       chrome::SetIntentPickerViewVisibility(
           chrome::FindBrowserWithWebContents(web_contents()), true);
+      preferred_platform = chromeos::PreferredPlatform::NATIVE_CHROME;
     } else {
       instance->HandleUrl(url.spec(), package_name);
-      cancel_navigation = true;
+      preferred_platform = chromeos::PreferredPlatform::ARC;
+      app_type = chromeos::AppType::ARC;
     }
     chromeos::AppsNavigationThrottle::RecordUma(
-        package_name, chromeos::AppType::ARC, close_reason,
-        /*should_persist=*/false);
+        package_name, app_type, close_reason, /*should_persist=*/false);
   }
-  return cancel_navigation;
+
+  return preferred_platform;
 }
 
 void ArcNavigationThrottle::GetArcAppIcons(
