chrome/browser/chromeos/arc/intent_helper/arc_navigation_throttle.h
@@ -106,10 +106,11 @@ class ArcNavigationThrottle : content::WebContentsObserver {
       chromeos::GetAppsCallback callback,
       std::vector<arc::mojom::IntentHandlerInfoPtr> app_candidates);
 
-  // Returns true if an app in |app_candidates| is preferred for handling the
-  // navigation represented by |handle|, and we are successfully able to launch
-  // it.
-  bool DidLaunchPreferredArcApp(
+  // Returns NONE if there is no preferred app given the potential
+  // |app_candidates| or if we had an error while checking for preferred apps.
+  // Otherwise return the platform where the preferred app lives (for now only
+  // ARC and NATIVE_CHROME).
+  chromeos::PreferredPlatform DidLaunchPreferredArcApp(
       const GURL& url,
       const std::vector<mojom::IntentHandlerInfoPtr>& app_candidates);
 
